# setup-python

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  action.yaml  action.yml  justfile  pyproject.toml
.github/workflows/: test.yaml  test.yml
