[project]
name = "workspace"
version = "0.0.0"
classifiers = ["Private :: Do Not Upload"]

[tool.poetry]
package-mode = false
packages = [
    { include = "workspace" },
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = [
    "linux-64",
    "linux-aarch64",
    "osx-64", 
    "osx-arm64", 
    "win-64",
]

[tool.pixi.pypi-dependencies]
workspace = { path = ".", editable = true }

[tool.pixi.tasks]
